scripts/demo-ai-gateway-poc/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ai-gateway
  namespace: team1
spec:
  gatewayClassName: eg
  listeners:
  - name: https
    port: 8443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: ai-gateway-access-mtls-server
